--- a/client/src/routes/Auth/styles.css
+++ b/client/src/routes/Auth/styles.css
@@ -44,6 +44,20 @@
     margin-right: 0.3rem;
 }
 
+.auth-route .logo-wrapper {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.auth-route .logo-wrapper h1 {
+    /* margin-top: 3rem; */
+    line-height: 0.7em;
+    margin-left: 1rem;
+    font-size: 3rem;
+}
+
 @media screen and (max-width: 542px) {
     .auth-route > .logo {
         margin-bottom: 1.5rem;
