--- a/client/src/routes/Profile/styles.css
+++ b/client/src/routes/Profile/styles.css
@@ -17,43 +17,99 @@
 }
 
 .banner-container {
+    max-height: 200px;
     position: relative;
-    width: 600px;
-    height: 200px;
-    background-color: var(--border-2);
+    width: 100%;
+    /* height: 200px; */
+    font-size: 0;
+    line-height: 0;
 }
 
-.profile .pfp-container {
+.profile {
+    flex: 1;
+}
+
+.profile .banner-container .pfp-container {
+    width: 20%;
+    height: auto;
     position: absolute;
-    bottom: -65px;
+    top: 70%;
     left: 18px;
-    width: 140px;
-    height: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #16181c;
     border: 4px solid var(--background);
+    /* border-radius: 50%/50% !important; */
+    border-radius: 999999999999px;
+    background-clip: padding-box;
+    box-shadow: 0 0 1px 1px var(--background) inset, 0 0 1px 0px var(--background);
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.profile .banner-container .pfp-container .pfp::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    background-color: rgba(26, 26, 26, 0.15);
+}
+
+.profile .banner-container .pfp-container .pfp {
+    position: relative;
+    width: 100%;
+    /* width: 130px; */
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    border-radius: 0 !important;
+}
+
+.banner-img-container {
+    /* height: 100%; */
+    background-color: var(--border-2);
+    display: inline-block;
+    /* max-width: 800px; */
+    width: 100%;
+    /* max-height: 200px; */
+}
+
+.banner-img-container.empty {
+    padding-bottom: 30%;
+    /* height: 200px !important; */
 }
 
 .profile .follow {
-    font-size: 0.875rem;
+    font-size: 0.875rem !important;
     font-weight: 700;
+    width: 100px;
 }
 
-.profile .follow.applied:hover {
+.follow.applied:hover,
+.follow.applied:active {
     color: rgb(244, 33, 46);
     border: 1px solid rgb(103, 7, 15);
     background-color: rgba(244, 33, 46, 0.1);
 }
 
-.profile .follow.applied:hover span {
+.follow.applied:hover span,
+.follow.applied:active span {
     display: none;
 }
 
-.profile .follow.applied:hover:before {
+.follow.applied:hover:before,
+.follow.applied:active:before {
     content: "Unfollow";
+    font-size: 0.875rem !important;
 }
 
 .profile .btn-empty {
     font-size: 0.93rem;
+}
+
+.profile .edit.btn-empty {
+    font-weight: 700;
 }
 
 .profile .options-container {
@@ -78,10 +134,10 @@
 }
 
 .profile .info-container {
-    padding: 1rem 1.5rem;
+    padding: 1rem 1.5rem 1rem 1.5rem;
 }
 
-.profile .username {
+.profile .info-container .username {
     margin-top: 0.2rem;
     margin-bottom: 1rem;
 }
@@ -89,6 +145,8 @@
 .biography {
     font-weight: 500;
     white-space: pre-wrap;
+    word-break: break-word;
+    margin-bottom: 0.8rem;
 }
 
 .counts {
@@ -103,8 +161,9 @@
     border: 1px solid transparent;
 }
 
-.count:hover {
-    border-bottom: 1px solid #fff;
+.count:hover,
+.count:active {
+    border-bottom: 1px solid var(--text-primary);
 }
 
 .count span {
@@ -115,7 +174,9 @@
 
 .icon-info {
     display: flex;
-    padding: 0.8rem 0 1rem 0;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    padding: 0 0 1rem 0;
     margin-bottom: 0.1rem;
 }
 
@@ -135,4 +196,34 @@
 .icon-info_item a {
     font-weight: 500;
     font-size: 0.9375rem;
+}
+
+.profile .tweets {
+    min-height: 100vh;
+}
+
+@media screen and (max-width: 420px) {
+    /* .banner-container {
+        max-height: 150px;
+    } */
+    /* .profile .banner-container .pfp-container {
+        width: 100px;
+        height: 100px;
+        top: 150px;
+    } */
+}
+
+@media screen and (max-width: 360px) {
+    /* .profile .banner-container .pfp-container {
+        width: 85px;
+        height: 85px;
+        top: 160px;
+    } */
+    .profile .options-container {
+        justify-content: unset;
+        padding: 3.5rem 1.125rem 1rem 1.125rem;
+    }
+    .profile .info-container {
+        padding: 0rem 1.5rem 1rem 1.5rem;
+    }
 }
