slight changes to component displaying user details

--- a/client/src/components/ui/UserPreview/styles.css
+++ b/client/src/components/ui/UserPreview/styles.css
@@ -4,7 +4,8 @@
     transition: background-color 0.2s linear;
 }
 
-.user-card:hover {
+.user-card:hover,
+.user-card:active {
     background-color: var(--tweet-hover);
 }
 
@@ -42,8 +43,8 @@
 
 .row-2 p {
     font-size: 0.975rem;
-    margin-top: 0.25rem;
-    color: var(--white);
+    margin-top: 0.4rem;
+    color: var(--text-primary);
     font-weight: 500;
 }
 
@@ -51,18 +52,37 @@
     font-size: 0.875rem;
     font-weight: 700;
     padding: 0.3rem 1rem;
+    width: 100px;
 }
 
-.user-card .follow.applied:hover {
+.user-card .follow.applied:hover,
+.user-card .follow.applied:active {
     color: rgb(244, 33, 46);
     border: 1px solid rgb(103, 7, 15);
     background-color: rgba(244, 33, 46, 0.1);
 }
 
-.user-card .follow.applied:hover span {
+.user-card .follow.applied:hover span,
+.user-card .follow.applied:active span {
     display: none;
 }
 
-.user-card .follow.applied:hover:before {
+.user-card .follow.applied:hover:before,
+.user-card .follow.applied:active:before {
     content: "Unfollow";
+}
+
+.row-1 .details-container {
+    display: flex;
+    margin-top: 0.2rem;
+}
+
+.row-1 .details-container .followed-sign {
+    background-color: var(--search-background);
+    color: var(--grey);
+    font-size: 0.7rem;
+    font-weight: 600;
+    padding: 0.13rem 0.3rem;
+    border-radius: 0.3rem;
+    margin-left: 0.5rem;
 }
