--- a/client/src/components/modals/EditProfile/styles.css
+++ b/client/src/components/modals/EditProfile/styles.css
@@ -11,11 +11,12 @@
     z-index: 99999;
     display: flex;
     align-items: center;
-    height: 50px;
+    height: 60px;
     width: 100%;
-    padding: 1rem;
+    padding: 0.75rem 1rem;
     border-bottom: 0 !important;
-    backdrop-filter: blur(12px);
+    /* backdrop-filter: blur(12px); */
+    background-color: var(--background);
 }
 
 .edit-modal_header .btn-close-modal {
@@ -28,7 +29,7 @@
 
 .save {
     font-size: 0.875rem;
-    font-weight: 800;
+    font-weight: 700;
     width: auto;
     padding: 0.45rem 1rem;
     margin-left: auto;
@@ -39,11 +40,22 @@
 }
 
 .edit-profile .pfp-container {
-    width: 115px;
-    height: 115px;
+    /* height: 115px; */
+    width: 20%;
+    min-width: 75px;
+    height: auto;
     position: absolute;
-    bottom: -55px;
+    top: 70%;
     left: 18px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #16181c;
+    border: 4px solid var(--background);
+    border-radius: 50%/50% !important;
+    background-clip: padding-box;
+    overflow: hidden;
 }
 
 .edit-modal_header h1 {
@@ -66,16 +78,25 @@
 }
 
 .edit-profile .banner-container {
-    margin-bottom: 5rem;
+    margin-bottom: 4.5rem;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #000;
+    background-color: var(--background);
+    max-height: 200px;
+    width: 100%;
+    /* height: 200px; */
+    font-size: 0;
+    line-height: 0;
+}
+
+.edit-profile .banner-img-container.empty {
+    height: 200px;
 }
 
 .edit-profile .pfp-container > .pfp {
-    border: 4px solid var(--background);
+    outline: 4px solid var(--background);
 }
 
 .upload-btn {
@@ -93,7 +114,8 @@
     transition: background-color 0.2s;
 }
 
-.upload-btn:hover {
+.upload-btn:hover,
+.upload-btn:active {
     background-color: rgba(39, 44, 48, 0.75);
 }
 
@@ -107,7 +129,7 @@
 
 .upload-btn .upload_icon {
     cursor: pointer !important;
-    color: var(--text-primary);
+    color: #fff;
 }
 
 .dob {
@@ -143,7 +165,8 @@
     transition: background-color 0.2s;
 }
 
-.full-btn:hover {
+.full-btn:hover,
+.full-btn:active {
     background-color: var(--sidebar-background);
 }
 
