--- a/client/src/routes/Explore/styles.css
+++ b/client/src/routes/Explore/styles.css
@@ -1,8 +1,17 @@
+.explore-route_header {
+    height: unset;
+}
+
 .explore-section-header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem 1rem 0.4rem 1rem;
+    padding: 0.75rem 1rem 1rem 1rem;
+    border-top: 1px solid var(--border);
+}
+
+.explore-route_header .mobile-sidebar_button {
+    margin-right: 1.5rem;
 }
 
 .explore-section-header h1 {
@@ -18,16 +27,20 @@
 
 .explore-route_more-btn {
     display: flex;
-    justify-content: center;
     align-items: center;
     width: 100%;
     padding: 0.75rem 1rem;
     color: var(--primary-colour);
-    border-top: 1px solid var(--border);
-    border-bottom: 1px solid var(--border);
 }
 
-.explore-route_more-btn:hover {
+.explore-route .explore-users,
+.explore-route .explore-tweets {
+    /* border-bottom: 1px solid var(--border); */
+    margin-bottom: 1rem;
+}
+
+.explore-route_more-btn:hover,
+.explore-route_more-btn:active {
     background-color: var(--tweet-hover);
 }
 
@@ -59,17 +72,8 @@
 }
 
 .explore-users_content .connect-item .follow {
-    width: auto;
+    width: 100px;
     height: 30px !important;
-}
-
-.explore-users_content .simple-card .pfp-container {
-    margin-right: 0.75rem;
-}
-
-.explore-users_content .simple-card .pfp-container > .pfp {
-    width: 40px;
-    height: 40px;
 }
 
 .explore-users_content .connect-item_header {
@@ -85,9 +89,18 @@
 .explore-tweets_content {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
 }
 
 .explore-tweets_content .trending-item {
     padding: 1rem !important;
+}
+
+.explore-users_content .placeholder,
+.explore-tweets_content .placeholder {
+    height: 200px;
+}
+
+.explore-route .widget-item .blue_round-btn .icon-container {
+    width: 17px;
+    height: 17px;
 }
