--- a/client/src/routes/Profile/styles.css
+++ b/client/src/routes/Profile/styles.css
@@ -51,6 +51,8 @@
 .profile .banner-container .pfp-container .pfp::after {
     content: "";
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: 999999;
